feat: support jar selection. remove STR preview feature