@@ -75,28 +75,27 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
                 <configuration>
                     <release>${java.version}</release>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
+                    <!--<compilerArgs>-->
+                    <!--    <enablePreview>true</enablePreview>-->
+                    <!--</compilerArgs>-->
                 </configuration>
             </plugin>
             <!-- needed in order to enable preview features in tests -->
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <jvmArguments>--enable-preview</jvmArguments>
-                </configuration>
-            </plugin>
+            <!--<plugin>-->
+            <!--    <artifactId>maven-surefire-plugin</artifactId>-->
+            <!--    <configuration>-->
+            <!--        <argLine>\-\-enable-preview</argLine>-->
+            <!--    </configuration>-->
+            <!--</plugin>-->
+            <!--<plugin>-->
+            <!--    <groupId>org.springframework.boot</groupId>-->
+            <!--    <artifactId>spring-boot-maven-plugin</artifactId>-->
+            <!--    <configuration>-->
+            <!--        <jvmArguments>\-\-enable-preview</jvmArguments>-->
+            <!--    </configuration>-->
+            <!--</plugin>-->
         </plugins>
     </build>
 </project>
